charts/coco-supported/custom-init/templates/custom-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom
  namespace: custom-init
spec:
  ports:
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: custom
  sessionAffinity: None
  type: ClusterIP
