charts/coco-supported/custom-init/templates/custom-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: custom
  namespace: custom-init
spec:
  port:
    targetPort: 8888
  to:
    kind: Service
    name: custom
    weight: 100
  wildcardPolicy: None
